// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CoreText > should render in markdown mode 1`] = `
<div
  class="CoreText"
  data-v-810f69c0=""
  style="cursor: pointer;"
>
  
  <base-markdown-stub
    data-v-810f69c0=""
    rawtext="# Hello

I'm the **content**."
    style="text-align: center;"
  />
  
</div>
`;

exports[`CoreText > should render in non-markdown mode 1`] = `
<div
  class="CoreText"
  data-v-810f69c0=""
  style="cursor: pointer;"
>
  
  <p
    class="plainText"
    data-v-810f69c0=""
    style="text-align: center;"
  >
    # Hello

I'm the **content**.
  </p>
  
</div>
`;
